samples/_failures_safe/1761694500_152b5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99218314.c: In function ‘tokenize’:
./samples/SAFE/__tmp_99218314.c:155:9: error: expected expression at end of input
  155 |         if (
      |         ^~
./samples/SAFE/__tmp_99218314.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99218314.c:155:9: error: expected declaration or statement at end of input
